# ComputerGraphics

./: README.md
PA/PA4/code/: CMakeLists.txt  main.cpp
PA/PA5/Code/: RayTracing  Renderer.cpp  Triangle.hpp  binary.ppm  main.cpp
PA/PA6/PA6/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  RayTracing  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
PA/PA7/PA7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  RayTracing  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  cornellbox_ssp64.ppm  global.hpp
PA/pa0/pa0/: CMakeLists.txt  main.cpp
PA/pa1/代码框架/: CMakeLists.txt  main.cpp
PA/pa2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
PA/pa3/Code/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp  shader_runner.sh
